--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,9 +112,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     // Markdown
-    implementation 'io.noties.markwon:core:4.4.0'
-    implementation 'io.noties.markwon:ext-tables:4.4.0'
-    implementation 'io.noties.markwon:ext-strikethrough:4.4.0'
+    implementation "io.noties.markwon:core:$markwon_version"
+    implementation "io.noties.markwon:ext-tables:$markwon_version"
+    implementation "io.noties.markwon:ext-strikethrough:$markwon_version"
 
     implementation ('io.ona.kujaku:library:0.8.7'){
         exclude module: 'xpp3'
