Enable test coverage for browserstack

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -496,6 +496,7 @@ android {
             // enable crashlytics
             buildConfigField "boolean", "USE_CRASHLYTICS", "true"
             ext.enableCrashlytics = true
+            testCoverageEnabled = true
         }
     }
 
