--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,6 +130,8 @@ dependencies {
     implementation('com.squareup.okhttp3:okhttp-tls:3.12.12') {
         exclude(group: 'org.bouncycastle', module: 'bcprov-jdk15on')
     }
+
+    implementation 'com.google.android.material:material:1.3.0'
 }
 
 ext {
