--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,11 +53,13 @@ dependencies {
     testImplementation project(path: ':commcare-core', configuration: 'testsAsJar')
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'io.mockk:mockk-android:1.10.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
+    androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.4.0'
 
     // need uiautomator to rotate the device.
     // this only works with API >=18
