Fix build errors

--- a/app/jacoco.gradle
+++ b/app/jacoco.gradle
@@ -5,6 +5,7 @@ android {
         unitTests.all {
             jacoco {
                 includeNoLocationClasses = true
+                excludes = ['jdk.internal.*'] // https://github.com/gradle/gradle/issues/5184#issuecomment-391982009
             }
         }
     }
