--- a/app/build.gradle
+++ b/app/build.gradle
@@ -488,6 +488,9 @@ android {
     }
 
     // Ignore un-minified graphing files
+    aaptOptions {
+        ignoreAssetsPattern '!*.max.js:!*.max.css'
+    }
 
     testOptions {
         unitTests.all {
@@ -503,9 +506,6 @@ android {
 
     // Needed to run espresso tests on release build.
     testBuildType project.ext.TEST_BUILD_TYPE
-    androidResources {
-        ignoreAssetsPattern '!*.max.js:!*.max.css'
-    }
 }
 
 /**
