keep StringsKt for use in instrumentation

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -120,3 +120,4 @@
     public void sendBroadcastSync(android.content.Intent);
 }
 -keep class kotlin.collections.ArraysKt { *; }
+-keep class kotlin.text.StringsKt { *; }
