Fixes interaction with gmaps on Android 11+ devices

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -82,6 +82,7 @@
         <intent>
             <action android:name="android.intent.action.TTS_SERVICE" />
         </intent>
+        <package android:name="com.google.android.apps.maps" />
     </queries>
 
     <application
