--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -382,14 +382,18 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="org.commcare.provider.ExternalApiReceiver">
+        <receiver
+            android:name="org.commcare.provider.ExternalApiReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="org.commcare.dalvik.api.action.ExternalAction"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </receiver>
 
-        <receiver android:name="org.commcare.provider.CommCareLogoutReceiver"
+        <receiver
+            android:exported="false"
+            android:name="org.commcare.provider.CommCareLogoutReceiver"
             android:permission="org.commcare.dalvik.permission.COMMCARE_LOGOUT">
             <intent-filter>
                 <action android:name="org.commcare.dalvik.api.action.CommCareLogoutAction"/>
@@ -397,14 +401,18 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name="org.commcare.provider.RefreshToLatestBuildReceiver">
+        <receiver
+            android:name="org.commcare.provider.RefreshToLatestBuildReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="org.commcare.dalvik.api.action.RefreshToLatestBuildAction"/>
 
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </receiver>
-        <receiver android:name="org.commcare.provider.DebugControlsReceiver">
+        <receiver
+            android:name="org.commcare.provider.DebugControlsReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="org.commcare.dalvik.api.action.SessionCaptureAction"/>
 
