keep kotlin collectionsKt

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -120,4 +120,5 @@
     public void sendBroadcastSync(android.content.Intent);
 }
 -keep class kotlin.collections.ArraysKt { *; }
+-keep class kotlin.collections.CollectionsKt { *; }
 -keep class kotlin.text.StringsKt { *; }
