Adds reminders app as one of the available dependency

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -83,6 +83,7 @@
             <action android:name="android.intent.action.TTS_SERVICE" />
         </intent>
         <package android:name="com.google.android.apps.maps" />
+        <package android:name="org.commcare.dalvik.reminders" />
     </queries>
 
     <application
