Set the export attribute of CommCareLogoutReceiver to true
This boradcast receiver is used by third-party apps to logout a CommCare
user, more info can be found [here]
[here]: https://github.com/dimagi/commcare-android/wiki/Broadcast-event-to-logout-current-user-from-CommCare

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -392,7 +392,7 @@
         </receiver>
 
         <receiver
-            android:exported="false"
+            android:exported="true"
             android:name="org.commcare.provider.CommCareLogoutReceiver"
             android:permission="org.commcare.dalvik.permission.COMMCARE_LOGOUT">
             <intent-filter>
