--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -84,6 +84,8 @@
         </intent>
         <package android:name="com.google.android.apps.maps" />
         <package android:name="org.commcare.dalvik.reminders" />
+        <package android:name="callout.commcare.org.sendussd" />
+        <package android:name="org.commcare.dalvik.abha" />
     </queries>
 
     <application
