--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,6 +134,7 @@ dependencies {
     }
 
     implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.guava:guava:30.1.1-jre'
 }
 
 ext {
