keep ImmutableList for Instrumentation tests

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -122,3 +122,4 @@
 -keep class kotlin.collections.ArraysKt { *; }
 -keep class kotlin.collections.CollectionsKt { *; }
 -keep class kotlin.text.StringsKt { *; }
+-keep class com.google.common.collect.ImmutableList { *; }
