--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -123,3 +123,4 @@
 -keep class kotlin.collections.CollectionsKt { *; }
 -keep class kotlin.text.StringsKt { *; }
 -keep class com.google.common.collect.ImmutableList { *; }
+-keep class com.google.common.collect.ImmutableList$Builder { *; }
