keep test class

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -124,3 +124,4 @@
 -keep class kotlin.text.StringsKt { *; }
 -keep class com.google.common.collect.ImmutableList { *; }
 -keep class com.google.common.collect.ImmutableList$Builder { *; }
+-keep class com.google.common.base.Preconditions { *; }
