keep test class

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -122,6 +122,7 @@
 -keep class kotlin.collections.ArraysKt { *; }
 -keep class kotlin.collections.CollectionsKt { *; }
 -keep class kotlin.text.StringsKt { *; }
+-keep class com.google.common.collect.Lists { *; }
 -keep class com.google.common.collect.ImmutableList { *; }
 -keep class com.google.common.collect.ImmutableList$Builder { *; }
 -keep class com.google.common.base.Preconditions { *; }
