--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -124,5 +124,5 @@
 -keep class kotlin.text.StringsKt { *; }
 -keep class com.google.common.collect.Lists { *; }
 -keep class com.google.common.collect.ImmutableList { *; }
--keep class com.google.common.collect.ImmutableList$Builder { *; }
+-keep class com.google.common.collect.** { *; }
 -keep class com.google.common.base.Preconditions { *; }
