keep all collections from google

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -219,4 +219,7 @@
   static *** getCurrentEnvironment (...);
 }
 
+# MultiMap doesn't get retained in the Android bundle without this
+-keep class com.google.common.collect.** { *; }
+
 # Guava Config End
