instrumentation test fix

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -222,4 +222,7 @@
 # MultiMap doesn't get retained in the Android bundle without this
 -keep class com.google.common.collect.** { *; }
 
-# Guava Config End
+# androidx.test.ext.truth.content.IntentSubject.hasAction fails in tests without this
+-keep class com.google.common.base.Preconditions { *; }
+
+# Guava Config Ends
