More tweaks to guava proguard config to fix tests and multimap serialisation

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -219,4 +219,10 @@
   static *** getCurrentEnvironment (...);
 }
 
+# Multimaps come as null from bundle.getExtra without this
+-keep class com.google.common.collect.** { *; }
+
+# androidx.test.ext.truth.content.IntentSubject.hasAction fails in it-tests without this
+-keep class com.google.common.base.Preconditions { *; }
+
 # Guava Config End
