Enable View Binding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -294,6 +294,10 @@ android {
         testInstrumentationRunner "org.commcare.CommCareJUnitRunner"
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
     applicationVariants.all { variant ->
         if (variant.buildType.name == "release") {
             variant.outputs.each { output ->
