Add PR edited activity

--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -2,8 +2,7 @@ name: commcare-android PR CI
 
 on:
   pull_request:
-    types:
-      - created
+    types: [opened, edited]
   issue_comment:
 jobs:
   build-test-assemble:
