--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -6,7 +6,7 @@ on:
   issue_comment:
 jobs:
   build-test-assemble:
-    if: ${{ github.event.issue.pull_request || (!github.event.issue.pull_request && contains(github.event.comment.body, 'retest this please'))}}
+    if: ${{ github.event_name == 'pull_request' || (github.event_name == 'issue_comment' && contains(github.event.comment.body, 'retest this please'))}}
     name: Build
     runs-on: macos-latest
     steps:
