--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -1,5 +1,7 @@
 name: commcare-android PR CI
 
+env:
+  PR_NUM: ${{github.event.issue.number || github.event.number }}
 on:
   pull_request:
     types: [opened, edited]
@@ -12,6 +14,8 @@ jobs:
     steps:
       - name: Checkout commcare-android
         uses: actions/checkout@v3
+        with:
+          ref: refs/pull/${{env.PR_NUM}}/head
       - name: Install python
         uses: actions/setup-python@v4
         with:
@@ -21,7 +25,7 @@ jobs:
           curl https://raw.githubusercontent.com/dimagi/mobile-deploy/master/checkout_cross_request_repo.py -o checkout_cross_request_repo.py
       - name: Run cross request script
         run: |
-          python3 checkout_cross_request_repo commcare-android ${{ github.event.pull_request.number }} commcare-core
+          python3 checkout_cross_request_repo.py commcare-android ${{env.PR_NUM}} commcare-core
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
