List python install packages

--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -28,6 +28,9 @@ jobs:
         uses: py-actions/py-dependency-install@v4
         with:
           path: "requirements.txt"
+      - name: List python
+        run: |
+          pip list
       - name: Run cross request script
         run: |
           python3 checkout_cross_request_repo.py commcare-android ${{env.PR_NUM}} commcare-core
