--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -60,7 +60,7 @@ jobs:
         with:
           arguments: assembleCommcareDebug
       - name: Restore Keystore
-        run: echo $SIGNING_KEY | base64 -d > ˜/.gradle/commcare-odk-keys.keystore
+        run: echo $SIGNING_KEY | base64 -d > ~/.gradle/commcare-odk-keys.keystore
       - name: Assemble Release apk
         uses: gradle/gradle-build-action@v2
         with:
