--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Run cross request script
         run: |
           cd ..
-          python3 checkout_cross_request_repo.py commcare-android ${{env.PR_NUM}} commcare-core
+          python3 checkout_cross_request_repo.py commcare-android ${{env.PR_NUM}} commcare-core . ${{ secrets.GITHUB_TOKEN }}
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
