--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -60,7 +60,12 @@ jobs:
         with:
           arguments: assembleCommcareDebug
       - name: Restore Keystore
-        run: echo ${{secrets.SIGNING_KEY}} | base64 -d > ~/.gradle/commcare-odk-keys.keystore
+        run: |
+          echo ${{secrets.SIGNING_KEY}} | base64 -d > ~/.gradle/commcare-odk-keys.keystore
+          cd ~/.gradle
+          ls -l
+          pwd
+
       - name: Assemble Release apk
         uses: gradle/gradle-build-action@v2
         with:
