--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -62,7 +62,12 @@ jobs:
       - name: Restore Keystore
         run: |
           echo ${{secrets.SIGNING_KEY}} | base64 -d > ~/.gradle/commcare-odk-keys.keystore
+          echo "RELEASE_KEY_ALIAS: ${{ secrets.ALIAS }}" > ~/.gradle/gradle.properties
+          echo "RELEASE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}" > ~/.gradle/gradle.properties
+          echo "RELEASE_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}" > ~/.gradle/gradle.properties
+          echo "RELEASE_STORE_FILE: ~/.gradle/commcare-odk-keys.keystore" > ~/.gradle/gradle.properties
           cd ~/.gradle
+          cat gradle.properties
           ls -l
           pwd
 
