Set keystore file absolute path

--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -65,7 +65,7 @@ jobs:
           echo ${{secrets.SIGNING_KEY}} | base64 -d > commcare-odk-keys.keystore
           echo "RELEASE_KEY_ALIAS: ${{ secrets.ALIAS }}" >> ~/.gradle/gradle.properties
           echo "RELEASE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}" >> ~/.gradle/gradle.properties
-          echo "RELEASE_STORE_FILE: commcare-odk-keys.keystore" >> ~/.gradle/gradle.properties
+          echo "RELEASE_STORE_FILE: /Users/runner/.gradle/commcare-odk-keys.keystore" >> ~/.gradle/gradle.properties
           echo "RELEASE_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}" >> ~/.gradle/gradle.properties
           
           cat gradle.properties
