Print current dir

--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -51,6 +51,10 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: lintCommcareRelease
+      - name: Print curr dir
+        run: |
+          ls -l
+          pwd
       - name: Run Tests
         uses: gradle/gradle-build-action@v2
         with:
