--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -104,7 +104,7 @@ jobs:
       - name: List Gradle tasks
         run: ./gradlew tasks --all
       - name: CommCare apk for Instrumentation Testing
-        run: ./gradlew assembleCommcareReleaseAndroidTest
+        run: ./gradlew assembleAndroidTest
       - name: Upload CommCare apk for Instrumentation Testing
         uses: actions/upload-artifact@v3
         with:
