--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -67,11 +67,19 @@ jobs:
         run: |
           cd ~/.gradle
           echo ${{secrets.SIGNING_KEY}} | base64 -d > commcare-odk-keys.keystore
-          echo "RELEASE_KEY_ALIAS: ${{ secrets.ALIAS }}" >> ~/.gradle/gradle.properties
-          echo "RELEASE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}" >> ~/.gradle/gradle.properties
-          echo "RELEASE_STORE_FILE: /Users/runner/.gradle/commcare-odk-keys.keystore" >> ~/.gradle/gradle.properties
-          echo "RELEASE_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}" >> ~/.gradle/gradle.properties
+          echo "RELEASE_KEY_ALIAS= ${{ secrets.ALIAS }}" >> ~/.gradle/gradle.properties
+          echo "RELEASE_KEY_PASSWORD= ${{ secrets.KEY_PASSWORD }}" >> ~/.gradle/gradle.properties
+          echo "RELEASE_STORE_FILE= /Users/runner/.gradle/commcare-odk-keys.keystore" >> ~/.gradle/gradle.properties
+          echo "RELEASE_STORE_PASSWORD= ${{ secrets.KEY_STORE_PASSWORD }}" >> ~/.gradle/gradle.properties
           
+          echo "GOOGLE_PLAY_MAPS_API_KEY= ${{ secrets.GOOGLE_PLAY_MAPS_API_KEY }}" >> ~/.gradle/gradle.properties
+          echo "GOOGLE_SERVICES_API_KEY= ${{ secrets.GOOGLE_SERVICES_API_KEY }}" >> ~/.gradle/gradle.properties
+          echo "HQ_API_PASSWORD= ${{ secrets.HQ_API_PASSWORD }}" >> ~/.gradle/gradle.properties
+          echo "HQ_API_USERNAME= ${{ secrets.HQ_API_USERNAME }}" >> ~/.gradle/gradle.properties
+          echo "TEST_BUILD_TYPE=${{ secrets.TEST_BUILD_TYPE }}" >> ~/.gradle/gradle.properties
+          echo "MAPBOX_SDK_API_KEY=${{ secrets.MAPBOX_SDK_API_KEY }}" >> ~/.gradle/gradle.properties
+          echo "${{ secrets.JVM_ARGS }}" >> ~/.gradle/gradle.properties
+          echo "${{ secrets.GRADLE_DAEMON }}" >> ~/.gradle/gradle.properties
           cat gradle.properties
           ls -l
           pwd
@@ -104,7 +112,7 @@ jobs:
       - name: List Gradle tasks
         run: ./gradlew tasks --all
       - name: CommCare apk for Instrumentation Testing
-        run: ./gradlew assembleAndroidTest
+        run: ./gradlew assembleCommcareReleaseAndroidTest
       - name: Upload CommCare apk for Instrumentation Testing
         uses: actions/upload-artifact@v3
         with:
