--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,6 +133,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.guava:guava:31.1-jre'
+
+    implementation 'androidx.biometric:biometric:1.1.0'
 }
 
 ext {
