--- a/.github/workflows/commcare-android-pr-workflow.yml
+++ b/.github/workflows/commcare-android-pr-workflow.yml
@@ -103,6 +103,13 @@ jobs:
         with:
           name: commcare-release-androidTest-apk
           path: app/build/outputs/apk/androidTest/commcare/release/app-commcare-release-androidTest.apk
+      - name: Run Instrumentation Tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 31
+          arch: x86_64
+          profile: Nexus 6
+          script: ./gradlew connectedCommcareDebugAndroidTest
       - name: Generate JaCoCo Report
         uses: gradle/gradle-build-action@v2
         with:
